--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "redux-persist": "^6.0.0"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
