--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,13 +1,11 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  app:
-    container_name: app-dev
-    image: app-dev
-    build:
-      context: .
-      target: development
+  dev:
+    build: 
+      context: ./
+      dockerfile: Dockerfile
     volumes:
-      - ./src:/app/src
+      - ./:/app
     ports:
-      - 5173:5173
+      - '5173:5173'
